--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,8 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    header{
-    width: 100%;
-    height: 7vh;
+    overflow: hidden;
     
-    }
     header{
         background-color: rgb(167, 166, 166);
         padding-top: 20px;  
@@ -60,7 +57,7 @@ body{
                 width: 50%;
                 height: 100%;
                 background-color: aquamarine;
-                padding: 20px;
+                
                 
             }
             .imagenSub{
